enable java 21 preview features