@@ -17,3 +17,24 @@ dependencies {
 tasks.test {
     useJUnitPlatform()
 }
+
+val ENABLE_PREVIEW = "--enable-preview"
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21)) // Use Java 21
+    }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add(ENABLE_PREVIEW) // Enable preview features for compilation
+}
+
+tasks.withType<Test>().configureEach {
+    useJUnitPlatform()
+    jvmArgs(ENABLE_PREVIEW) // Enable preview features for test runtime
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs(ENABLE_PREVIEW) // Enable preview features for application runtime
+}
